gitops/platform-kind/layers/networking/resources/network-policies/argocd.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: platform-ingress
  namespace: argocd
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: argocd
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: nginx-gateway-fabric
      toPorts:
        - ports:
            - port: "80"
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
    - fromEntities:
        - remote-node
        - world
