gitops/platform-kind/layers/networking/resources/network-policies/database.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: platform-ingress
  namespace: database
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: database
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cnpg-system
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
