gitops/platform-kind/layers/networking/resources/network-policies/redis.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: platform-ingress
  namespace: redis
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: redis
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: keda
      toPorts:
        - ports:
            - port: "6379"
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
    - fromEntities:
        - remote-node
        - world
