gitops/platform-kind/layers/networking/resources/network-policies/vault.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: platform-ingress
  namespace: vault
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: vault
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: nginx-gateway-fabric
      toPorts:
        - ports:
            - port: "8200"
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: external-secrets
      toPorts:
        - ports:
            - port: "8200"
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
    - fromEntities:
        - remote-node
